argocd/external-services/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-svc-sabnzbd
spec:
  type: ExternalName
  externalName: truenas.bowmans.site
  ports:
    - port: 10097
