argocd/external-services/sabnzbd/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ext-ingress-route-sabnzbd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sabnzbd.bowmans.site`)
      kind: Rule
      services:
      - name: ext-svc-sabnzbd
        port: 30055
  tls:
    secretName: ext-cert-sabnzbd
